# octopus

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Justfile  LICENSE-APACHE  LICENSE-MIT  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  TRADEMARKS  config.example.yaml  config.layered.example.yaml  config.middleware.example.yaml  config.production.example.yaml  config.security.example.yaml  config.test.yaml  dist-workspace.toml  octopus-gen.example.yaml
crates/octopus-admin/: .gitignore  Cargo.toml  askama.toml  build.rs  package.json  pnpm-lock.yaml
crates/octopus-admin/examples/: octopus_ui_demo.rs
crates/octopus-admin/scripts/: build-css.sh
crates/octopus-admin/src/: api_handlers.rs  auth.rs  handlers.rs  k8s_handlers.rs  lib.rs  models.rs  octopus_ui_handlers.rs  octopus_ui_handlers_pure.rs  plugin.rs  router.rs  tls_handlers.rs  ui_components.rs  upstream_handlers.rs  websocket.rs
crates/octopus-admin/styles/: input.css
crates/octopus-admin/templates/: analytics.html  base.html  bk.html  config.html  health.html  logs.html  octopus_ui_dashboard.html  octopus_ui_health.html  octopus_ui_plugins.html  octopus_ui_routes.html  overview.html  plugins.html  preline_dashboard.html  routes.html  shadcn_base.html  shadcn_health.html  shadcn_health_enhanced.html  shadcn_overview.html  shadcn_overview_enhanced.html  shadcn_plugins.html  shadcn_plugins_enhanced.html  shadcn_routes.html  shadcn_routes_enhanced.html
crates/octopus-admin/ui/: .gitignore  next.config.ts  package.json  pnpm-lock.yaml
crates/octopus-auth/: Cargo.toml
crates/octopus-auth/src/: apikey_provider.rs  authz.rs  authzen.rs  convention_provider.rs  forward_provider.rs  introspection_provider.rs  jwt_provider.rs  lib.rs  mtls_provider.rs  oidc.rs  opa.rs  provider.rs  rbac.rs  registry.rs  session.rs  token.rs
crates/octopus-compression/: Cargo.toml
crates/octopus-compression/src/: compressor.rs  config.rs  lib.rs  middleware.rs
crates/octopus-config/: Cargo.toml
crates/octopus-config/src/: builder.rs  lib.rs  loader.rs  merger.rs  types.rs  validator.rs  watcher.rs
crates/octopus-core/: Cargo.toml
crates/octopus-core/src/: backend.rs  error.rs  lib.rs  middleware.rs  request.rs  response.rs  types.rs  upstream.rs
crates/octopus-discovery/: Cargo.toml
crates/octopus-discovery/src/: consul.rs  dns.rs  etcd.rs  kubernetes.rs  lib.rs  mdns.rs  provider.rs
crates/octopus-discovery/tests/: mdns_tests.rs
crates/octopus-farp/: Cargo.toml
crates/octopus-farp/benches/: registry_benchmark.rs
crates/octopus-farp/src/: adapter.rs  api.rs  binding.rs  client.rs  discovery.rs  federation.rs  fetcher.rs  lib.rs  manifest.rs  registry.rs  registry_new.rs  registry_old.rs  route_generator.rs  schema.rs  schema_ops.rs  types.rs  validation.rs
crates/octopus-graphql/: Cargo.toml
crates/octopus-graphql/src/: lib.rs  middleware.rs  playground.rs  query.rs
crates/octopus-health/: Cargo.toml
crates/octopus-health/src/: checker.rs  circuit_breaker.rs  lib.rs  tracker.rs
crates/octopus-k8s/: Cargo.toml
crates/octopus-k8s/src/: apply.rs  controller.rs  crd.rs  crds.rs  dedicated.rs  endpoints.rs  error.rs  gateway_api.rs  ir.rs  leader.rs  lib.rs  policy.rs  refgrant.rs  status.rs  tls.rs  translate.rs  validate.rs
crates/octopus-metrics/: Cargo.toml
crates/octopus-metrics/src/: activity.rs  collector.rs  lib.rs  prometheus.rs  snapshot.rs
crates/octopus-middleware/: Cargo.toml
crates/octopus-middleware/src/: audit_logger.rs  auth_gateway.rs  body_transform.rs  bot_detection.rs  builder.rs  caching.rs  canary.rs  circuit_breaker.rs  compression.rs  connection_limits.rs  cors.rs  deduplication.rs  forward_auth.rs  header_transform.rs  ip_filter.rs  jwt.rs  lib.rs  logging.rs  rate_limit.rs  redirect.rs  request_id.rs  request_limits.rs  retry.rs  security_headers.rs  timeout.rs  waf.rs
crates/octopus-plugin-api/: Cargo.toml
crates/octopus-plugin-api/src/: auth.rs  context.rs  error.rs  interceptor.rs  lib.rs  plugin.rs  protocol.rs  script.rs  transform.rs
crates/octopus-plugin-runtime/: Cargo.toml
crates/octopus-plugin-runtime/src/: error.rs  hot_reload.rs  lib.rs  manager.rs  registry.rs
crates/octopus-plugins/: Cargo.toml
crates/octopus-plugins/src/: abi.rs  lib.rs  loader.rs  manager.rs  registry.rs  traits.rs
crates/octopus-protocols/: Cargo.toml
crates/octopus-protocols/src/: graphql.rs  grpc.rs  handler.rs  http.rs  lib.rs  sse.rs  websocket.rs  ws_proxy.rs
crates/octopus-proxy/: Cargo.toml
crates/octopus-proxy/src/: audit.rs  bulkhead.rs  client.rs  headers.rs  lib.rs  limits.rs  metrics.rs  pool.rs  proxy.rs  ratelimit.rs  retry.rs  routing.rs  shutdown.rs  timeout.rs  tls.rs  tracing_support.rs
crates/octopus-router/: Cargo.toml
crates/octopus-router/src/: convention.rs  host.rs  lib.rs  load_balancer.rs  matcher.rs  proxy_spec.rs  route.rs  trie.rs  virtual_gateway.rs
crates/octopus-runtime/: Cargo.toml
crates/octopus-runtime/src/: admin.rs  admin_new.rs  admin_old.rs  chain.rs  handler.rs  lib.rs  lifecycle.rs  probes.rs  redirect.rs  server.rs  shutdown.rs  worker.rs
crates/octopus-scripting/: Cargo.toml
crates/octopus-scripting/src/: context.rs  engine.rs  error.rs  lib.rs  middleware.rs  rhai_engine.rs
crates/octopus-state/: Cargo.toml
crates/octopus-state/examples/: basic_usage.rs  rate_limiting.rs
crates/octopus-state/src/: backend.rs  config.rs  error.rs  hybrid.rs  inmemory.rs  lib.rs  postgres_backend.rs  redis_backend.rs
crates/octopus-tls/: Cargo.toml
crates/octopus-tls/src/: acceptor.rs  config.rs  lib.rs  loader.rs  mtls.rs  reloadable.rs  sni.rs
crates/octopus-ui/: Cargo.toml
crates/octopus-ui/examples/: gomponents_style.rs
examples/: Cargo.toml  mdns_service.rs  quickstart.rs
examples/scripts/: api-versioning.rhai  request-logger.rhai  request-validation.rhai  response-transform.rhai  security-headers.rhai
octopus-cli/: Cargo.toml
octopus-cli/src/: main.rs
plugins/auth-jwt/: Cargo.toml
plugins/example-logging/: Cargo.toml
plugins/example-transform/: Cargo.toml
(+389 files in other folders)
