[package]
name = "octopus-examples"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "quickstart"
path = "quickstart.rs"

[[bin]]
name = "mdns_service"
path = "mdns_service.rs"

[dependencies]
# Octopus crates (for quickstart example)
octopus-admin = { path = "../crates/octopus-admin" }
octopus-auth = { path = "../crates/octopus-auth" }
octopus-config = { path = "../crates/octopus-config" }
octopus-core = { path = "../crates/octopus-core" }
octopus-health = { path = "../crates/octopus-health" }
octopus-middleware = { path = "../crates/octopus-middleware" }
octopus-plugins = { path = "../crates/octopus-plugins" }
octopus-router = { path = "../crates/octopus-router" }

# Workspace dependencies
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Example-specific dependencies
mdns-sd = "0.11"
local-ip-address = "0.6"
hostname = "0.4"
clap = { version = "4.5", features = ["derive"] }

