[package]
name = "octopus-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for Octopus API Gateway"

[[bin]]
name = "octopus"
path = "src/main.rs"

[dependencies]
octopus-core = { path = "../crates/octopus-core" }
octopus-config = { path = "../crates/octopus-config" }
octopus-runtime = { path = "../crates/octopus-runtime" }
octopus-router = { path = "../crates/octopus-router" }
octopus-middleware = { path = "../crates/octopus-middleware" }
octopus-plugins = { path = "../crates/octopus-plugins" }
octopus-health = { path = "../crates/octopus-health" }
octopus-farp = { path = "../crates/octopus-farp" }
octopus-k8s = { path = "../crates/octopus-k8s" }

# Async
tokio.workspace = true

# CLI
clap.workspace = true
clap_complete.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true

# HTTP client (for fetching specs)
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
http-body-util.workspace = true
bytes.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Utilities
regex = "1.10"
glob = "0.3"

[features]
# Kubernetes-first: ship the operator + K8s discovery by default.
default = ["kubernetes"]
kubernetes = ["octopus-runtime/kubernetes"]

