[package]
name = "octopus-admin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Admin dashboard for Octopus API Gateway (Askama + HTMX + Alpine.js)"

[features]
default = []
# Enable live Kubernetes CRD views (OctopusGateway/Route/Policy/Upstream).
# Off by default to keep the standalone build free of the kube client stack.
kubernetes = ["dep:octopus-k8s", "dep:kube", "dep:k8s-openapi"]

[dependencies]
# Core Octopus crates
octopus-core = { path = "../octopus-core" }
octopus-router = { path = "../octopus-router" }
octopus-config = { path = "../octopus-config" }
octopus-health = { path = "../octopus-health" }
octopus-plugins = { path = "../octopus-plugins" }
octopus-plugin-runtime = { path = "../octopus-plugin-runtime" }
octopus-metrics = { path = "../octopus-metrics" }
octopus-ui = { path = "../octopus-ui" }
octopus-farp = { path = "../octopus-farp" }

# Kubernetes CRD views (optional, behind the `kubernetes` feature)
octopus-k8s = { path = "../octopus-k8s", optional = true }
kube = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true }

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
http.workspace = true

# Templates
askama.workspace = true
askama_axum.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Authentication (admin session cookies)
jsonwebtoken.workspace = true
sha2.workspace = true

# TLS certificate inspection
x509-parser = "0.16"

# Time
chrono.workspace = true

# Logging
tracing.workspace = true

# WebSocket
tokio-tungstenite.workspace = true
futures.workspace = true

# Utilities
once_cell.workspace = true
uuid = { version = "1.6", features = ["v4", "serde"] }
hostname = "0.4"
num_cpus = "1.16"
sysinfo = "0.31"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "octopus-admin"
path = "src/bin/admin.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

