[package]
name = "octopus-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Authentication and authorization for Octopus API Gateway"

[dependencies]
octopus-core = { path = "../octopus-core" }
octopus-config = { path = "../octopus-config" }

# Async
tokio.workspace = true
async-trait.workspace = true

# HTTP
http.workspace = true
http-body-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Security
sha2.workspace = true
hmac.workspace = true
jsonwebtoken.workspace = true

# HTTP client (for OIDC discovery, forward auth)
reqwest = { version = "0.11", features = ["json"] }

# Scripting (for Rhai authz rules)
rhai.workspace = true

# Utilities
bytes.workspace = true
dashmap.workspace = true
uuid.workspace = true
base64 = "0.22"
url = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

