[package]
name = "octopus-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration management for Octopus API Gateway"

[dependencies]
octopus-core = { path = "../octopus-core" }

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utilities
url.workspace = true
humantime-serde.workspace = true
regex = "1.10"

# Async runtime (for config watcher)
tokio = { workspace = true, features = ["time", "sync", "fs", "macros"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros", "rt", "time", "sync", "fs"] }

