[package]
name = "octopus-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core types, traits, and error handling for Octopus API Gateway"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Async
async-trait.workspace = true
tokio.workspace = true

# HTTP
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
bytes.workspace = true
pin-project.workspace = true
uuid.workspace = true
url.workspace = true
humantime-serde = "1.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
mockall.workspace = true


