[package]
name = "octopus-discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
octopus-core = { path = "../octopus-core" }

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# HTTP
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utilities
bytes.workspace = true
url.workspace = true
dashmap.workspace = true

# Kubernetes (optional)
kube = { version = "0.96", features = ["client", "runtime", "rustls-tls"], optional = true }
k8s-openapi = { version = "0.23", features = ["v1_30"], optional = true }
futures = { version = "0.3", optional = true }

# DNS
trust-dns-resolver = { version = "0.23", optional = true }

# mDNS/Bonjour
mdns-sd = { version = "0.11", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util", "macros"] }

[features]
default = ["consul", "dns"]
consul = []
kubernetes = ["kube", "k8s-openapi", "futures"]
dns = ["trust-dns-resolver"]
mdns = ["mdns-sd"]
