[package]
name = "octopus-farp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FARP (Forge API Gateway Registration Protocol) client for Octopus"

[dependencies]
octopus-core = { path = "../octopus-core" }
octopus-router = { path = "../octopus-router" }
octopus-discovery = { path = "../octopus-discovery" }

# Async
tokio.workspace = true
async-trait.workspace = true

# HTTP
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# OpenAPI
utoipa.workspace = true

# Utilities
bytes.workspace = true
url.workspace = true
sha2.workspace = true
dashmap.workspace = true
reqwest = { version = "0.11", features = ["json"] }

# Registry backends (optional)
consul = { version = "0.4", optional = true }
etcd-client = { version = "0.13", optional = true }

# Kubernetes (optional)
kube = { version = "0.87", features = ["client", "runtime"], optional = true }
k8s-openapi = { version = "0.20", features = ["v1_28"], optional = true }

# Validation
jsonschema = { version = "0.17", optional = true }

# Rate limiting
governor = "0.6"

[features]
default = []
consul-backend = ["consul"]
etcd-backend = ["etcd-client"]
kubernetes = ["kube", "k8s-openapi"]
validation = ["jsonschema"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
wiremock.workspace = true
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
fastrand = "2.0"

[[bench]]
name = "registry_benchmark"
harness = false

