[package]
name = "octopus-graphql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GraphQL-aware gateway layer for Octopus API Gateway"

[dependencies]
octopus-core = { path = "../octopus-core" }
octopus-config = { path = "../octopus-config" }

# Async
async-trait.workspace = true

# HTTP
http.workspace = true
http-body-util.workspace = true
bytes.workspace = true

# GraphQL
apollo-compiler.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# URL query parsing (GET ?query=)
url.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
