[package]
name = "octopus-health"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Health checking and circuit breaker for Octopus API Gateway"

[dependencies]
octopus-core = { path = "../octopus-core" }

# Async
tokio.workspace = true
async-trait.workspace = true

# HTTP
http.workspace = true
hyper.workspace = true
hyper-util.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
parking_lot.workspace = true
dashmap.workspace = true
bytes.workspace = true
http-body-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }

