[package]
name = "octopus-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
octopus-core = { path = "../octopus-core" }
tokio.workspace = true
tracing.workspace = true
dashmap.workspace = true
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
http.workspace = true
