[package]
name = "octopus-plugins"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin system for Octopus API Gateway"

[dependencies]
octopus-core = { path = "../octopus-core" }

# Async
tokio.workspace = true
async-trait.workspace = true

# HTTP
http.workspace = true
http-body-util.workspace = true

# Dynamic loading
libloading.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
bytes.workspace = true
once_cell.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }

