[package]
name = "octopus-protocols"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Protocol handlers for Octopus API Gateway"

[dependencies]
octopus-core = { path = "../octopus-core" }

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# HTTP
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true
axum.workspace = true

# WebSocket
tokio-tungstenite.workspace = true

# gRPC
tonic.workspace = true
prost.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
bytes.workspace = true
pin-project.workspace = true
url.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# WebSocket handshake
sha1 = "0.10"
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

