[package]
name = "octopus-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP proxy with connection pooling for Octopus API Gateway"

[dependencies]
octopus-core = { path = "../octopus-core" }
octopus-health = { path = "../octopus-health" }
octopus-metrics = { path = "../octopus-metrics" }

# TLS support
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }

# Audit logging
uuid = { workspace = true, features = ["v4", "serde"] }

# Async
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
futures.workspace = true
pin-project.workspace = true

# HTTP
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
bytes.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
rand.workspace = true
httpdate.workspace = true
hex.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
humantime-serde.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

