[package]
name = "octopus-state"
version = "0.1.0"
edition = "2021"
authors = ["Octopus Contributors"]
description = "State management backends for Octopus API Gateway"
license = "MIT OR Apache-2.0"

[dependencies]
# Core
async-trait = "0.1"
bytes = "1.5"
dashmap = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"

# Redis backend (optional)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

# PostgreSQL backend (optional)
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "json"], optional = true }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["inmemory"]
inmemory = []
redis-backend = ["redis"]
postgres-backend = ["sqlx"]
hybrid = ["redis"]
all = ["inmemory", "redis-backend", "postgres-backend", "hybrid"]

